修改默认密码

--- a/ip_pass.conf
+++ b/ip_pass.conf
@@ -2,5 +2,5 @@
 #192.168.1.1
 #192.168.1.101 password
 #######################################
-REMOTE_PASS=Bjfx__2017
+REMOTE_PASS=***jfx*****
 192.168.20.201
